해시태그, 언어 설정 기능 추가 context tag 테이블 리팩토링