@@ -9,6 +9,7 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.util.Comparator;
 import java.util.List;
 import java.util.UUID;
 import java.util.stream.Collectors;
@@ -21,29 +22,20 @@ public class ContextService {
     private final ContextDimensionRepository dimensionRepository;
     private final ContextTagRepository tagRepository;
 
-    // --- Dimension Logic ---
-
     @Transactional
     public DimensionResponse createDimension(DimensionRequest request) {
         if (dimensionRepository.existsByName(request.name())) {
-            throw new IllegalArgumentException("Dimension already exists: " + request.name());
+            throw new IllegalArgumentException("Dimension already exists");
         }
-
-        ContextDimension dimension = ContextDimension.builder()
-                .name(request.name())
-                .build();
-
-        ContextDimension saved = dimensionRepository.save(dimension);
+        ContextDimension saved = dimensionRepository.save(ContextDimension.builder().name(request.name()).build());
         return new DimensionResponse(saved.getPublicId(), saved.getName());
     }
 
     public List<DimensionResponse> getAllDimensions() {
         return dimensionRepository.findAll().stream()
                 .map(d -> new DimensionResponse(d.getPublicId(), d.getName()))
-                .collect(Collectors.toList());
+                .toList();
     }
-
-    // --- Tag Logic ---
 
     @Transactional
     public TagResponse createTag(UUID dimensionPublicId, TagRequest request) {
@@ -53,32 +45,25 @@ public class ContextService {
         ContextTag tag = ContextTag.builder()
                 .dimension(dimension)
                 .tagName(request.tagName())
-                .displayName(request.displayName())
-                .locale(request.locale())
-                .displayOrder(request.displayOrder() != null ? request.displayOrder() : 0)
+                .displayNames(request.displayNames())
+                .displayOrders(request.displayOrders())
                 .build();
 
         ContextTag saved = tagRepository.save(tag);
 
+        // 기본값으로 'en' 사용 시연
         return new TagResponse(
-                saved.getPublicId(),
-                saved.getTagName(),
-                saved.getDisplayName(),
-                saved.getLocale(),
-                saved.getDisplayOrder(),
+                saved.getPublicId(), saved.getTagName(),
+                saved.getDisplayNameByLocale("en"),
+                saved.getOrderByLocale("en"),
                 dimension.getPublicId()
         );
     }
 
     public List<TagResponse> getTagsByLocale(String locale) {
-        return tagRepository.findAllByLocaleOrderByDisplayOrderAsc(locale).stream()
-                .map(t -> new TagResponse(
-                        t.getPublicId(),
-                        t.getTagName(),
-                        t.getDisplayName(),
-                        t.getLocale(),
-                        t.getDisplayOrder(),
-                        t.getDimension().getPublicId()))
+        return tagRepository.findAll().stream()
+                .sorted(Comparator.comparing(t -> t.getOrderByLocale(locale))) // 언어별 정렬 적용
+                .map(t -> mapToResponse(t, locale))
                 .collect(Collectors.toList());
     }
 
@@ -86,14 +71,19 @@ public class ContextService {
         ContextDimension dimension = dimensionRepository.findByPublicId(dimensionPublicId)
                 .orElseThrow(() -> new IllegalArgumentException("Dimension not found"));
 
-        return tagRepository.findAllByDimensionIdAndLocaleOrderByDisplayOrderAsc(dimension.getId(), locale).stream()
-                .map(t -> new TagResponse(
-                        t.getPublicId(),
-                        t.getTagName(),
-                        t.getDisplayName(),
-                        t.getLocale(),
-                        t.getDisplayOrder(),
-                        dimension.getPublicId()))
+        return tagRepository.findAllByDimensionId(dimension.getId()).stream()
+                .sorted(Comparator.comparing(t -> t.getOrderByLocale(locale))) // 언어별 정렬 적용
+                .map(t -> mapToResponse(t, locale))
                 .collect(Collectors.toList());
+    }
+
+    private TagResponse mapToResponse(ContextTag tag, String locale) {
+        return new TagResponse(
+                tag.getPublicId(),
+                tag.getTagName(),
+                tag.getDisplayNameByLocale(locale),
+                tag.getOrderByLocale(locale),
+                tag.getDimension().getPublicId()
+        );
     }
 }
